--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <p>Timing</p>
         </a>
 
-        <a href="alert.html">
+        <a href="./shops.html">
             <i class="fi fi-rr-store-alt"></i>
             <p>Near By</p>
             <p>Shops</p>
@@ -91,9 +91,12 @@
     <footer>
         <div class="contact-container">
             <h2>Contact Us</h2>
+            
             <a href="tel:+971568873508"><i class="fi fi-br-phone-call">&nbsp; +971 56 887 3508</i></a>
+
             <a href="mailto:your@email.com"><i class="fi fi-br-envelope">&nbsp; emiratescitycommunity</i></a>
-            <a href="https://wa.me/+971568873508"><i class="fi fi-brands-whatsapp">&nbsp; +971 56 887 3508</i></a>
+
+            <a href="https://wa.me/+971568873508"><i class="fi fi-brands-whatsapp">&nbsp; Whatsapp Us</i></a>
         </div>
         <div id="copyright">
             <p>&copy; 2024 <span>SAF Enterprise</span></p>
