--- a/jobs.html
+++ b/jobs.html
@@ -34,16 +34,16 @@
                     <h3>Maintained By</h3>
                     <h2>SAF Enterprise</h2>
                     <ul>
-                        <li><a href="./index.html"><i class="fi fi-rr-car-building"> &nbsp;Home</i></a></a></li>
+                        <li><a href="./index.html"><i class="fi fi-rr-car-building"> &nbsp;Home</i></a></li>
                         <li><a href="./alert.html"><i class="fi fi-br-bell-ring"> &nbsp;Alerts</i></a></li>
                         <li><a href="sale.html"><i class="fi fi-br-basket-shopping-simple"> &nbsp;Sale</i></a></li>
-                        <li><a href="./jobs.html"><i class="fi fi-rr-briefcase-blank"></i> &nbsp;Jobs</a></li>
-                        <li><a href=""><i class="fi fi-rr-form"></i></a> &nbsp;Offer Books</li>
+                        <li><a href="./jobs.html"><i class="fi fi-rr-briefcase-blank"> &nbsp;Jobs</i></a></li>
+                        <li><a href="./offers.html"><i class="fi fi-rr-form"> &nbsp;Offer Books</i></a></li>
                         <li><a href="#"><i class="fi fi-rs-clock-five"> &nbsp;Bus Timing</i></a></li>
                         <li><a href="./prayer.html"><i class="fi fi-rs-star-and-crescent"> &nbsp;Prayer Timing</i></a></li>
-                        <li><a href="#"><i class="fi fi-rr-store-alt"> &nbsp;Nearby Shops</i></a></li>
+                        <li><a href="./shops.html"><i class="fi fi-rr-store-alt"> &nbsp;Nearby Shops</i></a></li>
                         <li><a href="tel:112"><i class="fi fi-br-light-emergency-on"> &nbsp;SOS</i></a></li>
-                        <li><a href="about.html"><i class="fi fi-br-info"></i> &nbsp;About</a></li>
+                        <li><a href="./about.html"><i class="fi fi-br-info"> &nbsp;About</i></a></li>
                     </ul>
                     <button id="go-back"><i class="fi fi-bs-angle-left"></i></button>
                 </div>
@@ -60,7 +60,10 @@
         <section id="jobs-container">
 
             <div class="job-offer-container">
-                <p class="job-post-date">03/02/2024</p>
+                <div class="job-date-no">
+                    <p class="job-post-date">03/02/2024</p>
+                    <p class="job-no">Job post : 1</p>
+                </div>
                 <p class="job-title">Admin Assistant</p>
                 <p>Looking to hire for a sales executive to work in our showroom
                     Must be experienced in selling pumps/ sanitary/ plumbing materials / building materials
@@ -71,7 +74,10 @@
             </div>
             
             <div class="job-offer-container">
-                <p class="job-post-date">03/02/2024</p>
+                <div class="job-date-no">
+                    <p class="job-post-date">03/02/2024</p>
+                    <p class="job-no">Job post : 2</p>
+                </div>
                 <p class="job-title">Admin Assistant</p>
                 <p>Looking to hire for a sales executive to work in our showroom
                     Must be experienced in selling pumps/ sanitary/ plumbing materials / building materials
