--- a/offers.html
+++ b/offers.html
@@ -34,16 +34,16 @@
                     <h3>Maintained By</h3>
                     <h2>SAF Enterprise</h2>
                     <ul>
-                        <li><a href="./index.html"><i class="fi fi-rr-car-building"> &nbsp;Home</i></a></a></li>
+                        <li><a href="./index.html"><i class="fi fi-rr-car-building"> &nbsp;Home</i></a></li>
                         <li><a href="./alert.html"><i class="fi fi-br-bell-ring"> &nbsp;Alerts</i></a></li>
                         <li><a href="sale.html"><i class="fi fi-br-basket-shopping-simple"> &nbsp;Sale</i></a></li>
-                        <li><a href="./jobs.html"><i class="fi fi-rr-briefcase-blank"></i> &nbsp;Jobs</a></li>
-                        <li><a href=""><i class="fi fi-rr-form"></i></a> &nbsp;Offer Books</li>
+                        <li><a href="./jobs.html"><i class="fi fi-rr-briefcase-blank"> &nbsp;Jobs</i></a></li>
+                        <li><a href="./offers.html"><i class="fi fi-rr-form"> &nbsp;Offer Books</i></a></li>
                         <li><a href="#"><i class="fi fi-rs-clock-five"> &nbsp;Bus Timing</i></a></li>
                         <li><a href="./prayer.html"><i class="fi fi-rs-star-and-crescent"> &nbsp;Prayer Timing</i></a></li>
-                        <li><a href="#"><i class="fi fi-rr-store-alt"> &nbsp;Nearby Shops</i></a></li>
+                        <li><a href="./shops.html"><i class="fi fi-rr-store-alt"> &nbsp;Nearby Shops</i></a></li>
                         <li><a href="tel:112"><i class="fi fi-br-light-emergency-on"> &nbsp;SOS</i></a></li>
-                        <li><a href="about.html"><i class="fi fi-br-info"></i> &nbsp;About</a></li>
+                        <li><a href="./about.html"><i class="fi fi-br-info"> &nbsp;About</i></a></li>
                     </ul>
                     <button id="go-back"><i class="fi fi-bs-angle-left"></i></button>
                 </div>
@@ -65,7 +65,7 @@
             <p class="remarks">Prices for fruits are less compared to other shops</p>
             <div class="offer-pdf-utility">
                 <a href="./images/mosque.png"><i class="fi fi-br-download" download="Mango Midweek Offer.png"></i> &nbsp;Download</a>
-                <a href="#"><i class="fi fi-br-share-square"></i> &nbsp;Share</a>
+                <a href="whatsapp://send?text=Great%20offers%20going%20https%3A%2F%2Fexample.com" target="_blank"><i class="fi fi-br-share-square"></i> &nbsp;Share</a>
             </div>
         </div>
 
@@ -77,7 +77,7 @@
             <p class="remarks">Prices for fruits are less compared to other shops</p>
             <div class="offer-pdf-utility">
                 <a href="#"><i class="fi fi-br-download" download="Mango Weekend Offer.pdf"></i> &nbsp;Download</a>
-                <a href="whatsapp://send?text=Great%20offers%20going%20https%3A%2F%2Fexample.com" target="_blank"><i class="fi fi-br-share-square"></i> &nbsp;Share</a>
+                <a href="whatsapp://send?text=Great%20offers%20goin%20https%3A%2F%2Fexample.com" target="_blank"><i class="fi fi-br-share-square"></i> &nbsp;Share</a>
             </div>
         </div>
 
@@ -87,8 +87,9 @@
             <p class="remarks">Prices for fruits are less compared to other shops</p>
             <div class="offer-pdf-utility">
                 <a href="#"><i class="fi fi-br-download" download="Lulu Weekend Offer.pdf"></i> &nbsp;Download</a>
-                <a href="#"><i class="fi fi-br-share-square"></i> &nbsp;Share</a>
-            </div>        </div>
+                <a href="whatsapp://send?text=Great%20offers%20going%20https%3A%2F%2Fexample.com" target="_blank"><i class="fi fi-br-share-square"></i> &nbsp;Share</a>
+            </div>       
+        </div>
 
         <div class="offers-container">
             <p class="offer-shop-title">New Al Madina Weekend Offer</p>
@@ -96,8 +97,9 @@
             <p class="remarks">Prices for fruits are less compared to other shops</p>
             <div class="offer-pdf-utility">
                 <a href="#"><i class="fi fi-br-download" download="New Al Madina Weekend Offer.pdf"></i> &nbsp;Download</a>
-                <a href="#"><i class="fi fi-br-share-square"></i> &nbsp;Share</a>
-            </div>        </div>
+                <a href="whatsapp://send?text=Great%20offers%20going%20https%3A%2F%2Fexample.com" target="_blank"><i class="fi fi-br-share-square"></i> &nbsp;Share</a>
+            </div>       
+        </div>
 
     </main>
     <script src="main.js?v=4"></script>
