--- a/prayer.html
+++ b/prayer.html
@@ -50,6 +50,7 @@
             </div>
         </nav>
     </header>
+    
     <main id="main-prayer">
         <div id="together-container">
             <a id="back-btn" href="./index.html"><i class="fi fi-bs-angle-left"></i></a>
@@ -58,12 +59,12 @@
         <div id="prayer-time-container">
             <div id="iqama-container">
                 <p id="iqama">iqama</p>
-                <p id="fajar-iqama"><time>06:08 AM</time></p>
-                <p id="duha-iqama"><time>06:28 AM</time></p>
-                <p id="duhar-iqama"><time>12:43 PM</time></p>
-                <p id="asr-iqama"><time>03:59 PM</time></p>
-                <p id="magrib-iqama"><time>06:11 PM</time></p>
-                <p id="isha-iqama"><time>07:39 pM</time></p>
+                <p id="fajar-iqama"><time>06:05 AM</time></p>
+                <p id="duha-iqama"><time>07:16 AM</time></p>
+                <p id="duhar-iqama"><time>12:54 PM</time></p>
+                <p id="asr-iqama"><time>04:03 PM</time></p>
+                <p id="magrib-iqama"><time>06:17 PM</time></p>
+                <p id="isha-iqama"><time>07:44 PM</time></p>
             </div>
             <div id="prayer-container">
                 <p>prayers</p>
@@ -76,12 +77,12 @@
             </div>
             <div id="azan-container">
                 <p id="azan">azan</p>
-                <p id="fajar-azan"><time>05:43 AM</time></p>
-                <p id="duha-azan"><time>05:59 AM</time></p>
-                <p id="duhar-azan"><time>12:23 PM</time></p>
-                <p id="asr-azan"><time>03:39 PM</time></p>
-                <p id="magrib-azan"><time>06:03 PM</time></p>
-                <p id="isha-azan"><time>07:19 pM</time></p>
+                <p id="fajar-azan"><time>05:40 AM</time></p>
+                <p id="duha-azan"><time>05:56 AM</time></p>
+                <p id="duhar-azan"><time>12:34 PM</time></p>
+                <p id="asr-azan"><time>03:43 PM</time></p>
+                <p id="magrib-azan"><time>06:09 PM</time></p>
+                <p id="isha-azan"><time>07:24 pM</time></p>
             </div>
         </div>
     </main>
