--- a/shops.html
+++ b/shops.html
@@ -104,17 +104,7 @@
                         <p class="shop-calling"><a href="tel:+971568873508"><i class="fi fi-br-phone-call">&nbsp; +971 56 887 3508</i></a></p>
                         <p class="shop-texting"><a href="https://wa.me/+971568873508"><i class="fi fi-brands-whatsapp">&nbsp; Whatsapp Us</i></a></p>
                     </div>
-                    <span class="just-span"></span>
-                </li>
-
-                <li>
-                    <p class="shop-name">Mango Market</p>
-                    <p class="shop-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <div class="shop-contact">
-                        <p class="shop-calling"><a href="tel:+971568873508"><i class="fi fi-br-phone-call">&nbsp; +971 56 887 3508</i></a></p>
-                        <p class="shop-texting"><a href="https://wa.me/+971568873508"><i class="fi fi-brands-whatsapp">&nbsp; Whatsapp Us</i></a></p>
-                    </div>
-                    <span class="just-span"></span>
+                    <!-- <span class="just-span"></span> -->
                 </li>
 
             </ul>
@@ -176,7 +166,6 @@
                         <p class="shop-calling"><a href="tel:+971568873508"><i class="fi fi-br-phone-call">&nbsp; +971 56 887 3508</i></a></p>
                         <p class="shop-texting"><a href="https://wa.me/+971568873508"><i class="fi fi-brands-whatsapp">&nbsp; Whatsapp Us</i></a></p>
                     </div>
-                    <span class="just-span"></span>
                 </li>
 
             </ul>
@@ -238,7 +227,6 @@
                         <p class="shop-calling"><a href="tel:+971568873508"><i class="fi fi-br-phone-call">&nbsp; +971 56 887 3508</i></a></p>
                         <p class="shop-texting"><a href="https://wa.me/+971568873508"><i class="fi fi-brands-whatsapp">&nbsp; Whatsapp Us</i></a></p>
                     </div>
-                    <span class="just-span"></span>
                 </li>
 
             </ul>
@@ -300,7 +288,6 @@
                         <p class="shop-calling"><a href="tel:+971568873508"><i class="fi fi-br-phone-call">&nbsp; +971 56 887 3508</i></a></p>
                         <p class="shop-texting"><a href="https://wa.me/+971568873508"><i class="fi fi-brands-whatsapp">&nbsp; Whatsapp Us</i></a></p>
                     </div>
-                    <span class="just-span"></span>
                 </li>
 
             </ul>
@@ -362,7 +349,6 @@
                         <p class="shop-calling"><a href="tel:+971568873508"><i class="fi fi-br-phone-call">&nbsp; +971 56 887 3508</i></a></p>
                         <p class="shop-texting"><a href="https://wa.me/+971568873508"><i class="fi fi-brands-whatsapp">&nbsp; Whatsapp Us</i></a></p>
                     </div>
-                    <span class="just-span"></span>
                 </li>
 
             </ul>
